--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.Mooy1</groupId>
+            <groupId>com.github.SlimefunGuguProject</groupId>
             <artifactId>InfinityLib</artifactId>
-            <version>1.3.9</version>
+            <version>1.3.10</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
